# media-blitz-os

./: .dockerignore  .gitignore  Dockerfile  README.md  coverage.json  coverage.xml  pyproject.toml
.github/: ci-verification.md
.validation/: sprint46-final-head.trigger
architecture/: connected-ecosystem-inventory.md  internal-coherence-engine.md  knowledge-graph-model.md  opportunity-engine.md  runtime-topology.md  transport-language-layer.md
briefings/: NKS-BRF-000001-knowledge-manufacturing-operating-model.md  NKS-BRF-000002-clarity-as-economic-instrument.md  NKS-BRF-000003-ai-oversight-governance.md  NKS-BRF-000004-governance-as-compiler.md
context/: NKS-CTX-000001-operating-model-ai-context-pack.md
contracts/: adapter-contract-v1.md  downstream-product-boundaries-v1.json  enki-consumer-v1.json  enki-hosting-direction-v1.json  enki-hosting-options-v1.json  enki-hosting-validation-v1.json  publication-contract-v1.md
corpus/: artifact-specification.md  corpus-construction-workflow.md  corpus-index.md
diagnostics/: NKS-DIA-000001-clarity-to-capital-diagnostic.md  NKS-DIA-000002-agentic-ai-governance-domain-expansion.md
docs/: canonicalization-security-boundary.md  ecosystem-execution-backlog.md  enki-core-repository-assessment.md  enki-sprint33-downstream-consumer-boundary.md  execution-protocol.md  execution-queue.md  master-state-index.md  project-state.md  revised-execution-queue.md  sprint-3-dependency-decomposition.md  sprint43-v2-sync-trigger.txt  state-authority-model.md  system-charter.md  technical-backlog.md  temporal-human-evolution-feedback.md  validation-signal-architecture.md
engineering/: technical-backlog.md
evidence/: NKS-EVD-000002-uploaded-source-evidence-register.md  NKS-PROOF-000001-executive-outcome-claim-packet.md  (+3 more)
runtime/: STATUS.md
(+939 files in other folders)
