[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "nelson-knowledge-system"
version = "0.1.0"
description = "Portable runtime for the Nelson Knowledge System"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8,<3",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
]

[project.scripts]
nks = "nks.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/nks"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --cov=nks --cov-branch --cov-report=term-missing:skip-covered --cov-report=xml:coverage.xml --cov-report=json:coverage.json --cov-fail-under=70"

[tool.coverage.run]
branch = true
source = ["nks"]
omit = [
  "src/nks/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
fail_under = 70

[tool.coverage.json]
output = "coverage.json"
pretty_print = true

[tool.coverage.xml]
output = "coverage.xml"
